# NTNU-coursework

IINI4001-AndroidForProgrammers/oving1/: settings.gradle
IINI4003-CPPForProgrammers/oving1/: TempFraBruker.cpp  TempFraFil.cpp
IINI4003-CPPForProgrammers/oving2/: CMakeLists.txt  Teorioppgaver.md  main.cpp
IINI4003-CPPForProgrammers/oving3/: CMakeLists.txt  circle.cpp  client_circle.cpp  commodity.cpp  commodity.hpp  oppgave4.cpp
IINI4003-CPPForProgrammers/oving5/: CMakeLists.txt  main.cpp
IINI4003-CPPForProgrammers/oving6/: CMakeLists.txt  chess.cpp  web_server.cpp
IINI4003-CPPForProgrammers/oving7/: CMakeLists.txt  fraction.cpp  fraction.hpp  main.cpp  oppgave2.cpp  set.cpp  set.hpp
IINI4003-CPPForProgrammers/oving8/: CMakeLists.txt  oppg1.cpp  oppg2.cpp
IINI4014-PythonForProgrammers/: oving1.py  oving10.py  oving11.py  oving2.py  oving3.py  oving4.py  oving5.py  oving6.py  oving8.py  oving8_2.py  oving9.py  rsa.py
TDAT1005-DatabaserMedVideregaaendeProgrammering/Oving1/: LeserInnISBN.java
TDAT1005-DatabaserMedVideregaaendeProgrammering/Oving10/: Oving10.sql
TDAT1005-DatabaserMedVideregaaendeProgrammering/Oving11/: Oving11.sql
TDAT1005-DatabaserMedVideregaaendeProgrammering/Oving12/: Testklient.java
TDAT1005-DatabaserMedVideregaaendeProgrammering/Oving15/: Oving15.rtf  sql15.sql
TDAT1005-DatabaserMedVideregaaendeProgrammering/Oving17/: MainApp.java  Valuta.java
TDAT1005-DatabaserMedVideregaaendeProgrammering/Oving19/: Database.java  Test.java
TDAT1005-DatabaserMedVideregaaendeProgrammering/Oving2/: Bord.java  Klientprogram.java  (+1 more)
(+143 files in other folders)
